examples/tests/semantic/pass/assign1.tig
let
	var a := 0
	var a := a+2
in
end
