examples/tests/semantic/fail/typeMismatch.tig
let 
    var taylor := "Taylor"
in 
    taylor := 3
end 